--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,14 +1,17 @@
 nav a {
+    text-shadow: 120px;
+    color: aqua;
     text-decoration: none;
     padding-left: 20px;
 }
 
 nav a:hover {
     color: azure;
+    font-size: large;
 }
 
 .header nav {
-    padding-top: 15px;
-    height: 50px;
+    padding-top: 40px;
+    height: 100px;
     background-color: black;
 }
