--- a/src/components/Home/Home.css
+++ b/src/components/Home/Home.css
@@ -27,6 +27,16 @@
     font-weight: 700;
 }
 
+.CustomerReviews {
+    margin-bottom: 300px;
+
+}
+
+.button {
+    margin-top: 0;
+    margin-bottom: 50px;
+}
+
 @media only screen and (max-width: 900px) {
     .home-page {
         display: block;
